alignment issues

--- a/lab3/lab3-1/style.css
+++ b/lab3/lab3-1/style.css
@@ -32,3 +32,9 @@ table{
 th{
     border: 2px black solid;
 }
+
+#searchArea{
+    margin: auto;
+    width: 50%;
+    text-align: center;
+}
